<resources>
    <string name="app_name">Finder</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1545579039093127</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_map_screen">MapScreen</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_category_selection">CategorySelection</string>
    <string name="Delivery">Delivery</string>
    <string name="Maintenance">Maintenance</string>
    <string name="Information">Information Assistance</string>
    <string name="Help">Help</string>
    <string name="Miscllenous">Miscllenous</string>
    <string name="NextButtonInCategory">Next</string>
    <string name="editableTitleText">Enter A Title</string>

    <string name="title_activity_posted_services_list">PostedServicesList</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_page_selection">PageSelection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
